--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@glidejs/glide": "^3.4.1",
     "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
     "bulma": "^0.9.0",
