--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "compression-webpack-plugin": "^4.0.0",
     "cssnano": "^4.1.10",
     "favicons-webpack-plugin": "^3.0.1",
+    "glider-js": "^1.7.5",
     "html-webpack-plugin": "^4.3.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
